sema/testdata/gcc-c99-extra/reject/octal-constants-4.c
void
foo(void)
{
  double d;
  int i;

  d = 0o1307;
  d = 0o1307p1;
  d = 0x1307p1;
  i = 0oa011;
  i = 0o118;
}
